--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ footer-links:
 
 # Text under the icons in footer
 footer-text: 뭘 해야될지를 모르겠당
+© 2017 Kiko Now
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
