--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # Text under the icons in footer
-footer-text: 뭘 해야될지를 모르겠당
+footer-text: 뭘 해야될지를 모르겠당</br>
   © 2017 Kiko Now
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
